--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple/framework",
+  "name": "flavor/simple",
   "description": "The Simple Framework.",
   "keywords": ["framework", "simple"],
   "license": "MIT",
@@ -30,5 +30,14 @@
     "psr-4": {
       "Simple\\": "src/"
     }
-  }
+  },
+
+  "config": {
+    "preferred-install": "dist"
+  },
+
+  "repositories": [
+    {"type": "composer", "url": "http://packagist.phpcomposer.com"},
+    {"packagist": false}
+  ]
 }
