add sub composer.json for filesystem and log

--- a/src/Filesystem/composer.json
+++ b/src/Filesystem/composer.json
@@ -21,15 +21,8 @@
   },
 
   "autoload": {
-    "classmap": [
-    ],
-
-    "files": [
-      "src/Foundation/helpers.php"
-    ],
-
     "psr-4": {
-      "Simple\\": "src/"
+      "Simple\\Filesystem\\": ""
     }
   },
 
