--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 
   "require": {
     "php": ">=5.5.0",
-    "smarty/smarty": "3.1.27"
+    "smarty/smarty": "~3.1.27"
   },
 
   "require-dev": {
