--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 
   "require-dev": {
     "mockery/mockery": "~0.9",
-    "phpunit/phpunit": "~5.0"
+    "phpunit/phpunit": "~6.0"
   },
 
   "autoload": {
@@ -47,5 +47,5 @@
     }
   },
 
-  "minimum-stability": "dev"
+  "minimum-stability": "stable"
 }
